changed subRegion and city to address
